# euliaa_proc

./: .gitignore  README.md  cloud_detection.py  config_nc.yaml  generate_short_nc.py  generate_temp_nc_aprofiles.py  get_and_process_new_files.sh  get_new_files.sh  hdf5_to_nc.py  log.py  main.py  make_quicklooks.py  measurement.py  nc2bufr.py  nc2bufr_309024.py  processing_manager.py  pyproject.toml  reference_date.sh  test_h5_s3.ipynb  utils.py  write_netcdf.py
configs/: config_log.yaml  config_main.yaml  config_nc.yaml  config_nc_attrs.yaml  config_qc.yaml  config_qc1.yaml
data/: L2Test_NC_for_Aprofiles.nc  TM307092.bufr  TestNC.bufr  TestNC2BUFR_forloop_notemplate.bufr  TestNC_2.bufr  TestNC_L2B.nc  TestNC_forloop.bufr  Test_L2B.bufr  Test_profile_NC.nc  Test_profile_NC2BUFR_forloop_notemplate.bufr  datain.csv
euliaa_proc/: create_topic_and_notification.py  eprofile.py  log.py  main.py  make_quicklooks.py  measurement.py  nc2bufr.py  processing_manager.py  quicklooks.py  reference_date.sh  write_netcdf.py
euliaa_proc/config/: config_eprofile.yaml  config_log.yaml  config_main.yaml  config_main_s3.yaml  config_nc.yaml  config_qc1.yaml
euliaa_proc/data/: Test_profile_NC2BUFR_forloop_WPtemplate.bufr  datain.bufr
euliaa_proc/utils/: cloud_detection.py  conf_utils.py  data_utils.py  file_utils.py
old/: csv_to_yaml_ncvars.py  nc_short.py
tests/: test_cloud_detection.ipynb  tests_aprofiles.ipynb
tests_bucket_notifications/: 00_create_topic.py  01_create_notifications.py  02_http_listener.py  delete_topic.py  dummy_cred.yaml  list_topics.py  notes_on_setup.md  remove_notifications.py
